--- a/wp-content/themes/chargeautomation/package.json
+++ b/wp-content/themes/chargeautomation/package.json
@@ -14,6 +14,9 @@
     "gulp": "^3.9.1",
     "gulp-plumber": "^1.1.0",
     "gulp-ruby-sass": "^2.1.1",
-    "gulp-uglify": "^2.1.0"
+    "gulp-uglify": "^2.1.0",
+    "babel-preset-es2015": "~6",
+    "gulp-babel": "~6",
+    "browserify": "^14.5.0"
   }
 }
